refactoring, move test data to separated library (#46)

--- a/Services/ProductService/IVCRM.API.IntegrationTests/IVCRM.API.IntegrationTests.csproj
+++ b/Services/ProductService/IVCRM.API.IntegrationTests/IVCRM.API.IntegrationTests.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\IVCRM.Core\IVCRM.Core.csproj" />
+    <ProjectReference Include="..\..\..\IVCRM.TestData\IVCRM.TestData.csproj" />
     <ProjectReference Include="..\IVCRM.API\IVCRM.API.csproj" />
     <ProjectReference Include="..\IVCRM.DAL\IVCRM.DAL.csproj" />
   </ItemGroup>
