--- a/Services/ProductService/IVCRM.DAL.IntegrationTests/IVCRM.DAL.IntegrationTests.csproj
+++ b/Services/ProductService/IVCRM.DAL.IntegrationTests/IVCRM.DAL.IntegrationTests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\IVCRM.Core\IVCRM.Core.csproj" />
+    <ProjectReference Include="..\..\..\IVCRM.TestData\IVCRM.TestData.csproj" />
     <ProjectReference Include="..\IVCRM.DAL\IVCRM.DAL.csproj" />
   </ItemGroup>
 
